tests/fail/cap_struct.stderr
error[E0277]: the trait bound `CapService: Capability<capabilities::Delete<Orders>>` is not satisfied
 --> $DIR/cap_struct.rs:6:38
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  |                                      ^^^^^^ the trait `Capability<capabilities::Delete<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CanDeleteOrders`
 --> $DIR/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CanDeleteOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: Capability<capabilities::Update<Orders>>` is not satisfied
 --> $DIR/cap_struct.rs:6:30
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  |                              ^^^^^^ the trait `Capability<capabilities::Update<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CanUpdateOrders`
 --> $DIR/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CanUpdateOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: Capability<capabilities::Read<Orders>>` is not satisfied
 --> $DIR/cap_struct.rs:6:24
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  |                        ^^^^ the trait `Capability<capabilities::Read<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CanReadOrders`
 --> $DIR/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CanReadOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: Capability<capabilities::Create<Orders>>` is not satisfied
 --> $DIR/cap_struct.rs:6:16
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  |                ^^^^^^ the trait `Capability<capabilities::Create<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CanCreateOrders`
 --> $DIR/cap_struct.rs:6:1
  |
6 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CanCreateOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)
